# ruxguitar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/audio/: midi_builder.rs  midi_event.rs  midi_player.rs  midi_player_params.rs  midi_sequencer.rs  mod.rs  playback_order.rs
src/audio/midi_builder/: builder.rs  effects.rs  mod.rs  tests.rs
src/parser/: mod.rs  model.rs  music_parser.rs  parse.rs  primitive_parser.rs  song_parser.rs  song_parser_tests.rs  tbt_parser.rs  tbt_types.rs
src/parser/gp345/: mod.rs  music_parser.rs  primitive_parser.rs  song_parser.rs
src/parser/gp67/: archive.rs  document.rs  document_reader.rs  file_system.rs  song_builder.rs
src/parser/gpx/: bit_reader.rs  document_reader.rs  file_system.rs  mod.rs  song_builder.rs
src/ui/: application.rs  canvas_measure.rs  icons.rs  mod.rs  picker.rs  tablature.rs  tuning.rs  utils.rs
src/ui/iced_aw/: mod.rs  wrap.rs
test-files/: Adam - Oh Night Devine.tbt  Aguado - Study 1.tbt  All That She Wants.tbt  Arcadelt - Il Bianco E Dolce Cigno.tbt  Arndt - Nola.tbt  Ave Maria (Acoustic Guitar).tbt  Bach - #13 In A Minor.tbt  Blind Guardian - Nightfall.gp3  Ghost - Cirice.gp5  Guthrie Govan - Eric.gp5  John Petrucci - Damage Control (ver 6 by Feio666).gp5  Meshuggah - Bleed.gp5  Take On Me (2).tbt  The Black Dahlia Murder - Nightbringers.gp  Tyr - Evening Star.gpx  canon_rock.gp4  version_0x70_36600.tbt  version_0x72_31600.tbt  version_0x72_34200.tbt  version_0x72_41150.tbt
test-files/gold-generated-midi/: Adam - Oh Night Devine.tbt.txt  Aguado - Study 1.tbt.txt  All That She Wants.tbt.txt  Arcadelt - Il Bianco E Dolce Cigno.tbt.txt  Arndt - Nola.tbt.txt  Ave Maria (Acoustic Guitar).tbt.txt  Bach - #13 In A Minor.tbt.txt  Blind Guardian - Nightfall.gp3.txt  Demo v5.gp5.txt  Ghost - Cirice.gp5.txt  Guthrie Govan - Eric.gp5.txt  John Petrucci - Damage Control (ver 6 by Feio666).gp5.txt  Meshuggah - Bleed.gp5.txt  Take On Me (2).tbt.txt  The Black Dahlia Murder - Nightbringers.gp.txt  Tyr - Evening Star.gpx.txt  canon_rock.gp4.txt  version_0x70_36600.tbt.txt  version_0x72_31600.tbt.txt  version_0x72_34200.tbt.txt  version_0x72_41150.tbt.txt
tests/: library_usage.rs
