[package]
name = "ruxguitar"
version = "0.3.0"
edition = "2021"
authors = ["Arnaud Gourlay <arnaud.gourlay@gmail.com>"]
description = "Guitar pro tablature player"
repository = "https://github.com/agourlay/ruxguitar"
license = "Apache-2.0"
readme = "README.md"
categories = ["multimedia"]
keywords = ["guitar", "tablature", "music"]

[dependencies]
nom = "7.1.3"
encoding_rs = "0.8.34"
iced = { version = "0.13.0", features = ["advanced", "canvas", "tokio", "debug"] }
tokio = { version = "1.40.0", features = ["fs", "sync"] }
rfd = "0.14.1"
log = "0.4.22"
env_logger = "0.11.5"
rustysynth = "1.3.1"
cpal = "0.15.3"
uuid = { version = "1.10.0", features = ["v4"] }
thiserror = "1.0.63"
clap = { version = "4.5.17", features = ["derive", "cargo"] }