[package]
name = "ruxguitar"
version = "0.4.0"
edition = "2021"
authors = ["Arnaud Gourlay <arnaud.gourlay@gmail.com>"]
description = "Guitar pro tablature player"
repository = "https://github.com/agourlay/ruxguitar"
license = "Apache-2.0"
readme = "README.md"
categories = ["multimedia"]
keywords = ["guitar", "tablature", "music"]

[dependencies]
nom = "7.1.3"
encoding_rs = "0.8.35"
# Can't upgrade iced & iced_aw as it bumps the MSRV to 1.80 which breaks the Win7 & 8 builds :s
iced = { version = "0.13.0", features = ["advanced", "canvas", "tokio", "debug"] }
iced_aw = { version = "0.10.0", default-features = false, features = ["wrap"] }
tokio = { version = "1.41.1", features = ["fs", "sync"] }
rfd = "0.15.1"
log = "0.4.22"
env_logger = "0.11.5"
rustysynth = "1.3.2"
cpal = "0.15.3"
uuid = { version = "1.11.0", features = ["v4"] }
thiserror = "2.0.3"
clap = { version = "4.5.21", features = ["derive", "cargo"] }