[package]
name = "ruxguitar"
version = "0.5.6"
edition = "2021"
authors = ["Arnaud Gourlay <arnaud.gourlay@gmail.com>"]
description = "Guitar pro tablature player"
repository = "https://github.com/agourlay/ruxguitar"
license = "Apache-2.0"
readme = "README.md"
categories = ["multimedia"]
keywords = ["guitar", "tablature", "music"]

[lints.clippy]
cast_lossless = "warn"
doc_link_with_quotes = "warn"
enum_glob_use = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
needless_continue = "warn"
needless_raw_string_hashes = "warn"
ptr_as_ptr = "warn"
ref_option_ref = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
match_wildcard_for_single_variants = "warn"
needless_pass_by_ref_mut = "warn"
missing_const_for_fn = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unreadable_literal = "warn"

[dependencies]
nom = "8.0.0"
encoding_rs = "0.8.35"
# Can't upgrade iced & iced_aw as it bumps the MSRV to 1.80 which breaks the Win7 & 8 builds :s
iced = { version = "0.13.0", features = ["advanced", "canvas", "tokio", "debug"] }
iced_aw = { version = "0.10.0", default-features = false, features = ["wrap"] }
tokio = { version = "1.44.2", features = ["fs", "sync"] }
rfd = "0.15.3"
log = "0.4.27"
env_logger = "0.11.8"
rustysynth = "1.3.5"
cpal = "0.15.3"
thiserror = "2.0.12"
clap = { version = "4.5.36", features = ["derive", "cargo"] }